--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://use.typekit.net/osv1syj.css" />
   </head>
   <body style="margin: 0">
-    <main>
+    <header>
       <h1>ALEXANDER</h1>
-    </main>
+    </header>
     <img
       id="background"
       src="./images/madame_monet_and_her_son.jpg"
-      alt="woman_with_a_parasol"
+      alt="painting of a woman with a parasol"
     />
   </body>
 </html>
