feat: add about me

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
       <h1>ALEXANDER</h1>
     </header>
+    <main>
+      <section id="about">
+        <p class="about">I'm passionate about software and creative media</p>
+      </section>
+    </main>
     <img
       id="background"
       src="./images/madame_monet_and_her_son.jpg"
