--- a/index.html
+++ b/index.html
@@ -4,22 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alexander</title>
-    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/osv1syj.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body style="margin: 0">
-    <header>
-      <h1>ALEXANDER</h1>
-    </header>
-    <main>
-      <section id="about">
-        <p class="about">I'm passionate about software and creative media</p>
-      </section>
-    </main>
-    <img
+  <body>
+    <div id="frame">
+      <header>
+        <h1>
+          <a
+            href="#"
+            style="cursor: pointer; color: white; text-decoration: none"
+            >Alexander</a
+          >
+        </h1>
+        <nav>
+          <a
+            href="#about"
+            style="cursor: pointer; color: white; text-decoration: none"
+            >about</a
+          >
+          <a
+            href="#projects"
+            style="cursor: pointer; color: white; text-decoration: none"
+            >projects</a
+          >
+          <a
+            href="#contact"
+            style="cursor: pointer; color: white; text-decoration: none"
+            >contact</a
+          >
+        </nav>
+      </header>
+      <main>
+        <section id="about">
+          <p class="about">I'm passionate about software and creative media</p>
+          <p>I've dwellved into video editing,</p>
+          <p>photo editing, color grading, vfx</p>
+          <p>programming and much, much more!</p>
+        </section>
+      </main>
+    </div>
+    <!--     <img
       id="background"
       src="./images/madame_monet_and_her_son.jpg"
       alt="painting of a woman with a parasol"
-    />
+    /> -->
   </body>
 </html>
