feat: add particles.js

--- a/index.html
+++ b/index.html
@@ -6,43 +6,50 @@
     <title>Alexander</title>
     <link rel="stylesheet" href="https://use.typekit.net/osv1syj.css" />
     <link rel="stylesheet" href="style.css" />
+    <script src="./node_modules/particles.js/particles.js"></script>
+    <script src="app.js"></script>
   </head>
   <body>
     <div id="frame">
-      <header>
-        <h1>
-          <a
-            href="#"
-            style="cursor: pointer; color: white; text-decoration: none"
-            >Alexander</a
-          >
-        </h1>
-        <nav>
-          <a
-            href="#about"
-            style="cursor: pointer; color: white; text-decoration: none"
-            >about</a
-          >
-          <a
-            href="#projects"
-            style="cursor: pointer; color: white; text-decoration: none"
-            >projects</a
-          >
-          <a
-            href="#contact"
-            style="cursor: pointer; color: white; text-decoration: none"
-            >contact</a
-          >
-        </nav>
-      </header>
-      <main>
-        <section id="about">
-          <p class="about">I'm passionate about software and creative media</p>
-          <p>I've dwellved into video editing,</p>
-          <p>photo editing, color grading, vfx</p>
-          <p>programming and much, much more!</p>
-        </section>
-      </main>
+      <div id="particles-js"></div>
+      <div id="content">
+        <header>
+          <h1>
+            <a
+              href="#"
+              style="cursor: pointer; color: white; text-decoration: none"
+              >Alexander</a
+            >
+          </h1>
+          <nav>
+            <a
+              href="#about"
+              style="cursor: pointer; color: white; text-decoration: none"
+              >about</a
+            >
+            <a
+              href="#projects"
+              style="cursor: pointer; color: white; text-decoration: none"
+              >projects</a
+            >
+            <a
+              href="#contact"
+              style="cursor: pointer; color: white; text-decoration: none"
+              >contact</a
+            >
+          </nav>
+        </header>
+        <main>
+          <section id="about">
+            <p class="about">
+              I'm passionate about software and creative media
+            </p>
+            <p>I've dwellved into video editing,</p>
+            <p>photo editing, color grading, vfx</p>
+            <p>programming and much, much more!</p>
+          </section>
+        </main>
+      </div>
     </div>
     <!--     <img
       id="background"
