test: video playback

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <body>
     <div id="cursor-default"></div>
     <div id="frame" class="border">
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/naW2ZdUu63o?si=njRXQc42ii0Rz-ni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       <div id="particles-js"></div>
       <div id="content">
         <header>
@@ -59,15 +58,15 @@
           </section>
           <section id="projects" class="main-content">
             <div>
-              <p><section class="header-text">10 Pictures</section>
+              <p><section class="header-text"><button class="button">10 Pictures</button></section>
               idea / photography / post</p>
             </div>
             <div>
-              <p><section class="header-text">Boy in the bubble</section>
+              <p><section class="header-text"><button class="button" id="boy-in-the-bubble-button">Boy in the bubble</button></section>
               idea / edit / color / actor</p>
             </div>
             <div>
-              <p><section class="header-text">Farm Documentary</section>
+              <p><section class="header-text"><button class="button">Farm Documentary</button></section>
               idea / edit / actor</p>
             </div>
           </section>
@@ -77,6 +76,7 @@
           </section>
         </main>
       </div>
+      <iframe id="boy-in-the-bubble-video" src="https://www.youtube-nocookie.com/embed/naW2ZdUu63o?si=njRXQc42ii0Rz-ni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <script src="app.js"></script>
   </body>
