feat: add close button for fullscreen content

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="cursor-default"></div>
+    <button id="close-button">X</button>
     <div id="frame" class="border">
       <div id="particles-js"></div>
       <div id="content">
@@ -76,8 +77,8 @@
           </section>
         </main>
       </div>
-      <iframe id="boy-in-the-bubble-video" src="https://www.youtube-nocookie.com/embed/naW2ZdUu63o?si=njRXQc42ii0Rz-ni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
+        <iframe id="boy-in-the-bubble-video" class="fullscreen-content" src="https://www.youtube-nocookie.com/embed/naW2ZdUu63o?si=njRXQc42ii0Rz-ni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
     <script src="app.js"></script>
   </body>
 </html>
