feat: add better mobile support

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <script src="./node_modules/particles.js/particles.js"></script>
   </head>
   <body>
-    <div id="cursor-default"></div>
+    <div id="cursor-default" class="mouse"></div>
     <button id="close-button">X</button>
     <div id="frame" class="border">
-      <div id="particles-js"></div>
+      <div id="particles-js" class="mouse"></div>
       <div id="content">
         <header>
           <h1>
@@ -67,7 +67,7 @@
               idea / edit / color / actor</p>
             </div>
             <div>
-              <p><section class="header-text"><button class="button">Farm Documentary</button></section>
+              <p><section class="header-text"><button class="button" id="farm-documentary-button">Farm Documentary</button></section>
               idea / edit / actor</p>
             </div>
           </section>
@@ -78,6 +78,7 @@
         </main>
       </div>
         <iframe id="boy-in-the-bubble-video" class="fullscreen-content" src="https://www.youtube-nocookie.com/embed/naW2ZdUu63o?si=njRXQc42ii0Rz-ni" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe id="farm-documentary-video" class="fullscreen-content" src="https://www.youtube-nocookie.com/embed/D4iJDv8A23A?si=Q1U0PdrxxmLezCGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     <script src="app.js"></script>
   </body>
